Fix css on img alignement

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3121,3 +3121,42 @@ a {
   opacity: 0;
   transform: translateY(100px);
 }
+
+/* line 19, ../../sass/website/_serie.scss */
+.content {
+  background-color: #f0fefe;
+}
+
+/* line 23, ../../sass/website/_serie.scss */
+.content h1 {
+  font-size: 32px;
+}
+
+/* line 27, ../../sass/website/_serie.scss */
+.content-container {
+  background-color: #FFF;
+  font-size: 17px;
+  color: #5a6367;
+  line-height: 30px;
+}
+
+/* line 34, ../../sass/website/_serie.scss */
+.content-container h2 {
+  font-size: 29px;
+  margin-top: 40px;
+}
+
+/* line 39, ../../sass/website/_serie.scss */
+.content-container img {
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12);
+  display: block !important;
+  margin: auto !important;
+  max-width: 100% !important;
+  margin-top: 50px !important;
+  margin-bottom: 50px !important;
+}
+
+/* line 50, ../../sass/website/_serie.scss */
+.content-container ul, ol li {
+  line-height: 38px;
+}
