--- a/sass/website/_serie.scss
+++ b/sass/website/_serie.scss
@@ -13,3 +13,41 @@
     opacity: 0;
     transform: translateY(100px);
 }
+
+
+
+  .content{
+    background-color: #f0fefe;
+  }
+  
+  .content h1{
+    font-size: 32px;
+  }
+  
+  .content-container{
+    background-color: #FFF;
+    font-size: 17px;
+    color:#5a6367;
+    line-height: 30px;
+  }
+  
+  .content-container h2{
+    font-size: 29px;
+    margin-top: 40px;
+  }
+  
+  .content-container img{
+    box-shadow: 0 1px 5px rgba(0,0,0,.2), 0 2px 2px rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12);
+    display:block!important;
+    margin:auto!important;
+    max-width: 100%!important;;
+    margin-top: 50px!important;;
+    margin-bottom: 50px!important;;
+  }
+  
+  
+  
+  .content-container ul,ol li {
+    line-height: 38px;
+  }
+  
